[package]
name = "imgui-rendy-examples"
version = "0.0.23-pre"
edition = "2018"
authors = ["Joonas Javanainen <joonas.javanainen@gmail.com>", "imgui-rs contributors"]
description = "imgui crate examples using Rendy backend"
homepage = "https://github.com/Gekkio/imgui-rs"
repository = "https://github.com/Gekkio/imgui-rs"
license = "MIT/Apache-2.0"
publish = false

[features]
empty = ["imgui-rendy-renderer/empty"]
dx12 = ["imgui-rendy-renderer/dx12"]
metal = ["imgui-rendy-renderer/metal"]
vulkan = ["imgui-rendy-renderer/vulkan"]

[dev-dependencies]
imgui = { version = "0.0.23-pre", path = "../" }
imgui-rendy-renderer = { version = "0.0.23-pre", path = "../imgui-rendy-renderer" }
imgui-winit-support = { version = "0.0.23-pre", path = "../imgui-winit-support" }
